(#36)refactor: 음식 닉네임 추가했습니다.